Make changes to serve command